# lix-diff

./: Cargo.toml  LICENSE  README.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4hd7zwgjvf1gch8alkbvcsbmzpczp9ph-source  wfzdaqx66s8m3vj7y1kyrpglcy58gdr0-source
src/: diff.rs  main.rs  package.rs  parser.rs
