[package]
name = "lix-diff"
version = "1.5.0"
license = "MIT"
description = "A lix plugin for diffing two generations"
homepage = "https://github.com/isabelroses/lix-diff"
authors = ["Isabel Roses <isabel@isabelroses.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
humansize = "2.1.3"
nu-ansi-term = "0.50.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = { version = "3.1.2", features = ["path"] }
strip-ansi-escapes = "0.2.1"
terminal-light = "1.8.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
unreadable_literal = { level = "allow", priority = 1 }

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
